# synthetic-insurance-data

./: .gitignore  LICENSE  README.md  acquire_data.py  generate.py  main.py  process_data.py  pyproject.toml
docs/: methodology.md  methodology_report.html  synthetic_data_plan.md
generator/: __init__.py  constants.py  core.py  data_loader.py
processors/: __init__.py  accidents.py  claims.py  convictions.py  deprivation.py  driver_demographics.py  marital_status.py  mot_mileage.py  names.py  occupation.py  postcodes.py  vehicles.py
schemas/: example_quote.json  motor_quote.schema.json
