[project]
name = "synthetic-insurance-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "requests>=2.31",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "odfpy>=1.4",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "tqdm>=4.66",
]
